crates/bevy_ecs_compile_fail_tests/tests/ui/filter_in_data_position.stderr
error[E0277]: the trait bound `bevy_ecs::query::With<A>: WorldQueryData` is not satisfied
   --> tests/ui/filter_in_data_position.rs:6:22
    |
6   | fn system(mut query: Query<With<A>>) {
    |                      ^^^^^^^^^^^^^^ the trait `WorldQueryData` is not implemented for `bevy_ecs::query::With<A>`
    |
    = help: the following other types implement trait `WorldQueryData`:
              &'__w mut T
              &T
              ()
              (F0, F1)
              (F0, F1, F2)
              (F0, F1, F2, F3)
              (F0, F1, F2, F3, F4)
              (F0, F1, F2, F3, F4, F5)
            and $N others
note: required by a bound in `bevy_ecs::system::Query`
   --> C:/Source/rust/bevy/crates/bevy_ecs/src/system/query.rs:281:37
    |
281 | pub struct Query<'world, 'state, Q: WorldQueryData, F: WorldQueryFilter = ()> {
    |                                     ^^^^^^^^^^^^^^ required by this bound in `Query`
