crates/bevy_ecs_compile_fail_tests/tests/ui/filter_in_data_position.rs
use bevy_ecs::prelude::*;

#[derive(Component)]
struct A;

fn system(mut query: Query<With<A>>) {
    
}

fn main() {}